# titus-core

./: .gitignore  BYBIT_SUPPORT.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt
titus_core/data/: __init__.py  bybit.py  cache.py  factory.py  feed.py  hyperliquid.py  validation.py
titus_core/execution/: engine.py
titus_core/indicators/: registry.py
titus_core/metrics/: reporting.py
titus_core/strategies/: base.py
titus_core/trading/: __init__.py  orders.py  portfolio.py
titus_core/utils/: config.py  env.py  strategies.py
titus_live/: __init__.py
titus_live/adapters/: __init__.py
titus_live/adapters/bybit/: __init__.py  client.py
titus_live/adapters/hyperliquid/: __init__.py  client.py
titus_live/cli/: __init__.py  __main__.py  main.py
titus_live/execution/: __init__.py  live_engine.py
titus_live/utils/: __init__.py  config.py
